# renfeed

./: Cargo.toml  README.rst  index.html
renfeed_core/: Cargo.toml
renfeed_core/src/: config.rs  feed.rs  fetch.rs  lib.rs  template.rs
renfeed_gen_site/: Cargo.toml
renfeed_gen_site/src/: main.rs
share/: feed.yml
share/feeds/: basic.yml
src/: cli.yml  main.rs
styles/: layout.css
templates/: basic.tera.html
