[package]
name = "renfeed_core"
version = "0.0.1"
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]
license = "Apache-2.0"
description = "renfeed's core functionality to handle RSS/Atom"
repository = "https://github.com/wdv4758h/renfeed/"
keywords = ["RSS", "Atom"]
readme = "../README.rst"

[dependencies]
rss = "0.4.0"               # RSS format
atom_syndication = "0.3.0"  # Atom format
serde = "0.8.21"            # needed by serde_derive
serde_derive = "0.8.21"     # Macros 1.1 implementation of #[derive(Serialize, Deserialize)]
serde_yaml = "0.4.1"        # YAML feed setting, pinning the old version for clap issue #747
hyper = "0.9.4"             # fetching RSS feed
tera = "0.6.1"              # HTML template
